[package]
authors = ["Mike Cargal <mike@cargal.net>"]
edition = "2018"
name = "dungeoncrawl"
version = "0.1.0"
description = "A simple little \"You need to save the world by finding the Amulet\" game. \n To work on learning Rust."
[dependencies]
bracket-lib = "0.8.1"
legion = "=0.3.1"
serde = { version = "=1.0.115"}
ron = "=0.6.1"
colored = "2"
lazy_static = "1.4.0"
itertools = "0.9.0"
clap = "~2.33.3"
[patch.crates-io]
bracket-lib = { path = "/Users/mike/rustProjects/bracket-lib"}
[profile.release]
lto = "thin"
